ft_services/srcs/containers/nginx/nginx_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxss
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 1234
    nodePort: 1234
    protocol: TCP
    name: ssh
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: nginx
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: mynginx
        ports:
        - containerPort: 1234
          name: ssh
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        imagePullPolicy: Never
